--- a/package.json
+++ b/package.json
@@ -149,8 +149,7 @@
     "concurrently": "^3.6.1",
     "cors": "^2.8.4",
     "cross-env": "5.2.0",
-    "eosjs": "^16.0.0",
-    "eosjs-api": "^7.0.3",
+    "pcjs": "^1.1.19",
     "express": "4.16.3",
     "grid-styled": "^4.2.0",
     "history": "4.7.2",
