--- a/package.json
+++ b/package.json
@@ -127,12 +127,12 @@
       "compression",
       "cross-env",
       "express",
-      "ip",
       "minimist",
       "sanitize.css",
       "url-loader",
       "concurrently",
-      "cors"
+      "cors",
+      "dotenv-safe"
     ],
     "include": [
       "core-js",
@@ -149,17 +149,17 @@
     "concurrently": "^3.6.1",
     "cors": "^2.8.4",
     "cross-env": "5.2.0",
-    "pcjs": "^1.1.19",
+    "dotenv-safe": "^6.1.0",
     "express": "4.16.3",
     "grid-styled": "^4.2.0",
     "history": "4.7.2",
     "i18next": "^11.5.0",
     "i18next-browser-languagedetector": "^2.2.3",
     "invariant": "2.2.4",
-    "ip": "1.1.5",
     "lodash": "4.17.10",
     "minimist": "1.2.0",
     "moment": "^2.22.2",
+    "pcjs": "^1.1.19",
     "polished": "^1.9.2",
     "prop-types": "15.6.2",
     "query-string": "^6.0.0",
@@ -203,6 +203,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "circular-dependency-plugin": "5.0.2",
     "css-loader": "0.28.11",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "17.0.0",
     "eslint-config-airbnb-base": "13.0.0",
