修改国旗库

--- a/package.json
+++ b/package.json
@@ -141,8 +141,6 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "bugsnag-js": "^4.7.3",
-    "bugsnag-react": "^1.1.1",
     "chalk": "^2.4.1",
     "chart.js": "^2.7.2",
     "compression": "1.7.3",
@@ -164,6 +162,7 @@
     "prop-types": "15.6.2",
     "query-string": "^6.0.0",
     "react": "16.4.2",
+    "react-country-flag": "^1.1.0",
     "react-dom": "16.4.2",
     "react-ga": "^2.5.3",
     "react-i18next": "^7.10.1",
@@ -173,7 +172,6 @@
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
     "react-select": "^2.0.0",
-    "react-world-flags": "^1.2.4",
     "redux": "4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
