--- a/package.json
+++ b/package.json
@@ -140,6 +140,8 @@
     ]
   },
   "dependencies": {
+    "@bugsnag/js": "^6.4.3",
+    "@bugsnag/plugin-react": "^6.4.0",
     "babel-polyfill": "6.26.0",
     "chalk": "^2.4.1",
     "chart.js": "^2.7.2",
